[workspace]
resolver = "2"

members = [
    "gui/egui_demo",
    "gui/druid_demo",
    "gui/iced_demo",
    "gui/fltk_demo",
    "gui/slint_demo",
    "playground",
    "practice/minegrep",
    "practice/rust_model_example",
    "practice/comprehensive_rust",
    "practice/rust_by_example"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
