[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "3.2.8"
ansi_term = "0.12.1"
threadpool = "1.8.1"
num = "0.4.0"
num_cpus = "1.13.1"
image = "0.24.2"
